2006-03-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/test/instrument-name-align.ly: new file.

	* scm/define-markup-commands.scm (hcenter-in): add hcenter-in.

	* input/test/instrument-name-align.ly: new file. Document how to
	align instrument names.

	* lily/mark-engraver.cc: remove properties.

	* scm/define-context-properties.scm
	(all-user-translation-properties): remove align symbol properties
	for barnumber/reh. mark.

	* lily/break-align-interface.cc (self_align_callback): new
	interface, new function. Look at complete alignment. This handles
	tunable break alignments in case break-align-symbols are missing.

	* lily/bar-number-engraver.cc (acknowledge_break_alignment): new function

	* lily/mark-engraver.cc (acknowledge_break_alignment): new function.

	* python/convertrules.py (conv): mark/bar number alignment rule.

	* lily/break-align-interface.cc (calc_positioning_done): also
	store offset from last visible break-alignment to its
	neighbor. This makes alignment on non-visible objects more reliable.

	* po/lilypond.pot (Module): ran po-replace.

	* input/regression/tie-single-manual.ly (Module): new file.

	* lily/tie-formatting-problem.cc (find_optimal_tie_configuration):
	look at has_manual_position_.
	(from_ties): set has_manual_position_ if tie has staff-position set.

	* lily/tuplet-bracket.cc (calc_positions): idem.

	* lily/tuplet-number.cc (print): don't print tupletnumber if it
	doesn't span time.

2006-03-19  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/define-markup-commands.scm (smallCaps): new markup command
	for turning a text to small caps using smaller font size and upper
	casing.

2006-03-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ examples, instrument-notation,
	advnaced-notation: minor fixes from mailist.

2006-03-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (First steps): change example
	to verbatim.  

2006-03-17  Graham Percival  <gpermus@gmail.com>
